[ios] Removes leading whitespace from the incognito NTP text.

The items in the bulleted lists on the NTP are indented with eight
leading spaces.  This causes issues when text wraps to multiple lines,
as the subsequent lines are not indented.  Mitigate the impact of this
behavior by manually removing the leading whitespace from bulleted list
items, so that when text wraps, subsequent lines do not look as bad.

BUG=860500
TEST=The incognito NTP bulleted lists should not be indented.

Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ibbb44f33bbd5bf5c98e7c1d14814b8f183613f63
Reviewed-on: https://chromium-review.googlesource.com/1155090
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Rohit Rao <rohitrao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579067}
Former-commit-id: 68a979bd87269cf64f1cb228cef5cb997dfb78cc